--- a/toonly/stylesheets/blog.css
+++ b/toonly/stylesheets/blog.css
@@ -51,3 +51,33 @@ section.blog-content {
     background: -o-linear-gradient(120deg, #fff, #fefefe);
     overflow: hidden;
 }
+
+section.blog-content > p.q {
+    color: red;
+}
+
+section.blog-content > p.a {
+    color: green;
+    text-indent: 2em;
+}
+
+section.blog-content > p.a + p.q {
+    border-top: 1px dashed black;
+}
+
+section.blog-content code {
+    color: darkblue;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+p.a > a.ex {
+    color: #40AA53;
+    background: rgba(0, 0, 0, 0.3);
+    text-decoration: none;
+}
+
+p.a > a.ex:before {
+    content: '例: ';
+    font-size: medium;
+    color: #0000ff;
+}
