--- a/toonly/stylesheets/blog.css
+++ b/toonly/stylesheets/blog.css
@@ -35,6 +35,10 @@ section.blog-header {
     background: -webkit-linear-gradient(120deg, #159957, #155799);
     background: -o-linear-gradient(120deg, #159957, #155799);
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
 }
 
 section.blog-header span {
@@ -44,7 +48,7 @@ section.blog-header span {
 section.blog-content {
     color: #256;
     width: 100%;
-    padding: 0 calc((100% - 800px) / 2);
+    padding: 50px calc((100% - 800px) / 2) 0;
     margin: 0 auto;
     background: -moz-linear-gradient(120deg, #fff, #fefefe);
     background: -webkit-linear-gradient(120deg, #fff, #fefefe);
