--- a/toonly/stylesheets/blog.css
+++ b/toonly/stylesheets/blog.css
@@ -49,7 +49,7 @@ section.blog-content {
     color: #256;
     width: 100%;
     padding: 50px calc((100% - 800px) / 2) 0;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     background: -moz-linear-gradient(120deg, #fff, #fefefe);
     background: -webkit-linear-gradient(120deg, #fff, #fefefe);
     background: -o-linear-gradient(120deg, #fff, #fefefe);
