--- a/toonly/stylesheets/blog.css
+++ b/toonly/stylesheets/blog.css
@@ -51,6 +51,14 @@ section.blog-header {
     line-height: 50px;
 }
 
+section.blog-content-fixed {
+    position: fixed;
+    width: 100%;
+
+    top: 50px;
+    bottom: 0;
+}
+
 section.blog-header span {
     cursor: pointer;
 }
