--- a/toonly/stylesheets/blog.css
+++ b/toonly/stylesheets/blog.css
@@ -41,9 +41,16 @@ strong {
 section.blog-header {
     color: white;
     padding: 0 256px;
-    background: -moz-linear-gradient(120deg, #159957, #155799);
-    background: -webkit-linear-gradient(120deg, #159957, #155799);
-    background: -o-linear-gradient(120deg, #159957, #155799);
+
+    background: rgba(179,220,237,1);
+    background: -moz-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    background: -webkit-gradient(linear,left top, right bottom, color-stop(0%, rgba(179,220,237,1)), color-stop(50%, rgba(41,184,229,1)), color-stop(100%, rgba(188,224,238,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    background: linear-gradient(135deg, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', endColorstr='#bce0ee', GradientType=1 );
+
     overflow: hidden;
     position: fixed;
     width: 100%;
